syntax = "proto3";

package txpay;

//import "google/protobuf/empty.proto";
message TxPayOrderRequest {
  string orderNo = 1;
  string payType = 2;
  string transactionAmount = 3;
  string bankCode = 4;
  string pageUrl = 5;
  string orderName = 6;
  string merchantId = 7;
  string currency = 8;
  string sourceIp = 9;
  string userId = 10;
  string jumpType = 11;
}

message TxPayOrderResponse {
  string status = 1;
  string code   = 2;
  string msg    = 3;
}

message TxPayQueryOrderRequest {
  string orderNo = 1;
  string channelOrderNo = 2;
}

message TxPayQueryOrderResponse {
  string status = 1;
  string code   = 2;
  string msg    = 3;
}

message TxPayQueryBalanceRequest {

}

message TxPayQueryInternalBalanceResponse {
  string channelNametring = 1;
  string channelCodingtring = 2;
  string withdrawBalance = 3;
  string proxyPayBalance = 4;
  string updateTimetring = 5;
  string errorCodetring = 6;
  string errorMsgtring = 7;
}

message TxProxyPayOrderRequest {
  string orderNo = 1;
  string transactionType = 2;
  string transactionAmount = 3;
  string receiptAccountNumber = 4;
  string receiptAccountName = 5;
  string receiptCardProvince = 6;
  string receiptCardCity = 7;
  string receiptCardArea = 8;
  string receiptCardBranch = 9;
  string receiptCardBankCode = 10;
  string receiptCardBankName = 11;
}
message TxProxyPayOrderResponse {
  string status = 1;
  string code   = 2;
  string msg    = 3;

}

message TxProxyPayQueryRequest {
  string orderNo = 1;
  string channelOrderNo = 2;
}
message TxProxyPayQueryResponse {
  string status = 1;
  string code   = 2;
  string msg    = 3;
}

message TxProxyPayQueryInternalBalanceRequest {

}
message TxProxyPayQueryInternalBalanceResponse {
  string channelNametring = 1;
  string channelCodingtring = 2;
  string withdrawBalance = 3;
  string proxyPayBalance = 4;
  string updateTimetring = 5;
  string errorCodetring = 6;
  string errorMsgtring = 7;
}


service TxPay {
  rpc TxPayOrder(TxPayOrderRequest) returns(TxPayOrderResponse);
  rpc TxPayOrderQuery(TxPayQueryOrderRequest) returns(TxPayQueryOrderResponse);
  rpc TxPayQueryBalance(TxPayQueryBalanceRequest) returns(TxPayQueryInternalBalanceResponse);
  rpc TxProxyPayOrder(TxProxyPayOrderRequest) returns(TxProxyPayOrderResponse);
  rpc TxProxyPayOrderQuery(TxProxyPayQueryRequest) returns(TxProxyPayQueryResponse);
  rpc TxProxyPayQueryBalance(TxProxyPayQueryInternalBalanceRequest) returns(TxProxyPayQueryInternalBalanceResponse);
}